set xunit v3 expectations

--- a/src/DynamoDbLite.Tests/DynamoDbLite.Tests.csproj
+++ b/src/DynamoDbLite.Tests/DynamoDbLite.Tests.csproj
@@ -23,11 +23,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Using Include="Xunit" />
+	  <ProjectReference Include="..\DynamoDbLite\DynamoDbLite.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\src\DynamoDbLite\DynamoDbLite.csproj" />
+		<Using Include="Xunit" />
 	</ItemGroup>
 
 </Project>
