--- a/src/DynamoDbLite.Tests/DynamoDbLite.Tests.csproj
+++ b/src/DynamoDbLite.Tests/DynamoDbLite.Tests.csproj
@@ -6,6 +6,7 @@
 		<Nullable>enable</Nullable>
 		<EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
 		<IsPackable>false</IsPackable>
+		<NoWarn>CA1707</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
