--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+# Claude Code local settings
+.claude/settings.local.json
+
 # User-specific files
 *.rsuser
 *.suo
