--- a/src/DynamoDbLite/DynamoDbLite.csproj
+++ b/src/DynamoDbLite/DynamoDbLite.csproj
@@ -1,10 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net10.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-		<EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -12,14 +8,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AWSSDK.DynamoDBv2" Version="4.0.14" />
-		<PackageReference Include="Dapper" Version="2.1.66" />
-		<PackageReference Include="Microsoft.Data.Sqlite" Version="10.0.2" />
-		<PackageReference Include="IDisposableAnalyzers" Version="4.0.8">
+		<PackageReference Include="AWSSDK.DynamoDBv2" />
+		<PackageReference Include="Dapper" />
+		<PackageReference Include="Microsoft.Data.Sqlite" />
+		<PackageReference Include="IDisposableAnalyzers">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Superpower" Version="3.1.0" />
+		<PackageReference Include="Superpower" />
 	</ItemGroup>
 
 </Project>
