marked phase 11 complete. still some cleanup remaining

--- a/src/DynamoDbLite.Tests/DynamoDbLite.Tests.csproj
+++ b/src/DynamoDbLite.Tests/DynamoDbLite.Tests.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<IsPackable>false</IsPackable>
-		<NoWarn>CA1707</NoWarn>
+		<NoWarn>CA1707;CA1051;IDISP026</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
