--- a/src/DynamoDbLite.DependencyInjection/DynamoDbLite.DependencyInjection.csproj
+++ b/src/DynamoDbLite.DependencyInjection/DynamoDbLite.DependencyInjection.csproj
@@ -8,6 +8,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
 	</ItemGroup>
 
