--- a/src/DynamoDbLite.Tests/DynamoDbLite.Tests.csproj
+++ b/src/DynamoDbLite.Tests/DynamoDbLite.Tests.csproj
@@ -7,6 +7,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="coverlet.collector" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" />
 		<PackageReference Include="IDisposableAnalyzers">
 			<PrivateAssets>all</PrivateAssets>
@@ -22,6 +24,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\DynamoDbLite\DynamoDbLite.csproj" />
+	  <ProjectReference Include="..\DynamoDbLite.DependencyInjection\DynamoDbLite.DependencyInjection.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
