ramped up analysis level

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -6,6 +6,9 @@
 		<Nullable>enable</Nullable>
 		<EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
 		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+		<AnalysisMode>all</AnalysisMode>
+		<AnalysisLevel>latest-all</AnalysisLevel>
+		<AnalysisModeSecurity>All</AnalysisModeSecurity>
 	</PropertyGroup>
 
 </Project>
