--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -418,3 +418,9 @@ dotnet_diagnostic.CA5379.severity = suggestion
 dotnet_diagnostic.CA5384.severity = suggestion
 dotnet_diagnostic.CA5385.severity = suggestion
 dotnet_diagnostic.CA5397.severity = warning
+dotnet_diagnostic.CA2100.severity = warning
+dotnet_diagnostic.CA2153.severity = warning
+dotnet_diagnostic.CA3001.severity = warning
+dotnet_diagnostic.CA3003.severity = warning
+dotnet_diagnostic.CA3012.severity = warning
+dotnet_diagnostic.CA5394.severity = warning
