--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -424,3 +424,12 @@ dotnet_diagnostic.CA3001.severity = warning
 dotnet_diagnostic.CA3003.severity = warning
 dotnet_diagnostic.CA3012.severity = warning
 dotnet_diagnostic.CA5394.severity = warning
+dotnet_diagnostic.CA2007.severity = none
+
+[DynamoDbLite.Tests/**.cs]
+dotnet_diagnostic.CA1307.severity = none
+dotnet_diagnostic.CA1515.severity = none
+dotnet_diagnostic.CA1812.severity = none
+dotnet_diagnostic.CA1816.severity = none
+dotnet_diagnostic.CA1852.severity = none
+dotnet_diagnostic.CA2214.severity = none
