test only on code changes

--- a/.github/workflows/dotnet.tests.yml
+++ b/.github/workflows/dotnet.tests.yml
@@ -3,8 +3,10 @@ name: .NET Test
 on:
   push:
     branches: [ "main" ]
+    paths: [ "src/**" ]
   pull_request:
     branches: [ "main" ]
+    paths: [ "src/**" ]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
